<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GiaoDien.MainActivity">


    <TextView
        style="@style/tieude"
        android:text="@string/thongtin" />

    <EditText
        android:id="@+id/txtMa"
        style="@style/txt"
        android:hint="@string/ma" />

    <EditText
        android:id="@+id/txtTen"
        style="@style/txt"
        android:hint="@string/ten" />

    <TextView
        style="@style/tieude"
        android:text="@string/chucnang" />

    <LinearLayout style="@style/chucnang">

        <Button
            android:id="@+id/btnThem"
            style="@style/btn"
            android:drawableLeft="@drawable/ic_library_add_black_24dp"
            android:text="@string/them" />

        <Button

            android:id="@+id/btnXoa"
            style="@style/btn"
            android:drawableLeft="@drawable/ic_delete_forever_black_24dp"
            android:text="@string/xoa" />/>

        <Button
            android:id="@+id/btnSua"
            style="@style/btn"
            android:drawableLeft="@drawable/ic_create_black_24dp"
            android:text="@string/sua" />/>

        <Button
            android:id="@+id/btnThoat"
            style="@style/btn"
            android:drawableLeft="@drawable/ic_exit_to_app_black_24dp"
            android:text="@string/thoat" />

    </LinearLayout>

    <TextView
        style="@style/tieude"
        android:text="@string/ds" />

    <ListView
        android:id="@+id/lvDanhSach"
        style="@style/lv"></ListView>
</LinearLayout>